# AutomaticCampusNetworkLogin

./: .gitignore  README.md  README.zh-CN.md  campus_login.py  pyproject.toml
examples/: password.example.txt
src/njust_campus_login/: __init__.py  cli.py  core.py
systemd/: campus-login.env.example  campus-login.service  campus-login.timer
tests/: test_core.py  test_credentials.py
